# esp32_keyboard

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  package-lock.json  package.json  partitions.csv  rollup.config.js  sdkconfig  sdkconfig.defaults
components/ble/: CMakeLists.txt  ble_device.c  ble_events.c  ble_gap.c  esp_hid_gap.c  gatts_event_handler.c  hal_ble.c  hid_device_le_prf.c  layout_service.c
components/ble/include/: ble_events.h  esp_hid_gap.h  hal_ble.h  hid_dev.h
components/ble/private_include/: ble_device.h  ble_events_prv.h  ble_gap.h  layout_service.h
components/control/: CMakeLists.txt  function_control.c
components/control/include/: function_control.h
components/debug/: CMakeLists.txt  memory_debug.c
components/debug/include/: memory_debug.h
components/display/: CMakeLists.txt  bluetooth_icon.c  keyboard_gui.c  keyboard_gui_about.c  keyboard_gui_bluetooth.c  keyboard_gui_keyboard_info.c  keyboard_gui_led.c  keyboard_gui_nonleaf_menu.c  keyboard_gui_widgets.c  keyboard_gui_wifi.c  lcd_hardware.c  lcd_hardware_st7789.c  menu_state_machine.c  status_display.c  usb_icon.c  wifi_icon.c
components/display/icons/: advanced-icon.c  advanced_icon.c  battery_charge.c  battery_normal.c  bluetooth-icon.c  bluetooth_icon.c  bluetooth_off.c  bluetooth_on.c  bluetooth_pc_pair_icon.c  bluetooth_phone_pair_icon.c  bluetooth_target.c  info-icon.c  info_icon.c  keyboard-icon.c  keyboard_icon.c  keyboard_lock_icon.c  keyboard_logging_icon.c  keyboard_meter_A.c  keyboard_meter_B.c  keyboard_meter_icon.c  keyboard_reset_meter_banner.c  keyboard_reset_meter_icon.c  led-icon.c  led_icon.c  led_pattern_icon.c  lower_case_letter.c  plug_on.c  switch_icon.c  upper_case_letter.c  wifi-icon.c  wifi_icon.c  wifi_off.c  wifi_on.c  wifi_setting_icon.c
components/display/include/: display_hardware_info.h  input_events.h  keyboard_gui.h  lcd_hardware_st7789.h  menu_state_machine.h  status_display.h
components/display/private_include/: keyboard_gui_construct.h  keyboard_gui_internal.h  keyboard_gui_widgets.h  lcd_hardware.h  lcd_hardware_internal.h  menu_icons.h  menu_item_funcs.h  menu_state_machine.h
components/drv_loop/: CMakeLists.txt  drv_loop.c
components/drv_loop/include/: drv_loop.h
components/hid/: CMakeLists.txt  hid.c
components/hid/include/: hid.h
components/hid_desc/: CMakeLists.txt  hid_desc.c
components/hid_desc/include/: hid_desc.h
components/hidkeycodeconv/: CMakeLists.txt  keycode_conv.c
components/hidkeycodeconv/include/: keycode_conv.h
components/keymap/: CMakeLists.txt  function_key.c  key_definitions.c  keymap.c  keymap_json.c  layout_store.c  macros.c
components/keymap/include/: config.h  function_key.h  key_definitions.h  keyboard_config.h  keymap_const.h  keymap_json.h  layout_store.h  macros.h
components/keymap/test/: CMakeLists.txt  test_macro_conversions.c
components/led_ctrl/: CMakeLists.txt  led_ctrl.c
components/led_ctrl/include/: led_ctrl.h
components/matrix_config/: CMakeLists.txt
components/miscs/: CMakeLists.txt  led_drv.c  miscs.c
components/miscs/include/: led_drv.h  miscs.h
components/nvsfuncs/: CMakeLists.txt  arr_conv.c  nvs_funcs.c  nvs_io.c
components/nvsfuncs/include/: arr_conv.h  nvs_funcs.h  nvs_io.h  nvs_keymaps.h
components/oled/include/: u8g2_esp32_hal.h
components/port_mgmt/: CMakeLists.txt  port_mgmt.c
components/port_mgmt/include/: port_mgmt.h
components/pwr_mgmt/: CMakeLists.txt  ble_power_mgmt.c  display_power_mgmt.c  idle_detection.c  led_power_mgmt.c
components/pwr_mgmt/include/: idle_detection.h
components/pwr_mgmt/prv_include/: ble_power_mgmt.h  display_power_mgmt.h  led_power_mgmt.h
components/quantum/: CMakeLists.txt  cscope.out  keymap.h  quantum.h  version.h
components/tmk_core/: CMakeLists.txt
components/tmk_core/common/: action_layer.h  host.c  matrix.h  print.h  report.h  wait.h
components/tmk_core/common/esp32s3/: eeconfig.c  keyboard_report.c  keyboard_report.h  miscs.c  print.c  print.h  timer.c
components/web/: CMakeLists.txt  keymap_server.c
components/web/include/: keymap_server.h
components/wifi/: CMakeLists.txt  wifi_ap.c  wifi_intf.c
components/wifi/include/: wifi_ap.h  wifi_intf.h
components/wifiman/: wifi_manager.c
docs/: POWER_OPTIMIZATION_PLAN.md
keyboards/x32k/: keymap.h
main/: CMakeLists.txt  config.h  idf_component.yml  key_definitions.c  key_definitions.h  keyboard_config.h  keymap.c  keymap.h  keymap_server.c  keypress_handles.c  matrix.c  matrix_config.c  matrix_config.h  mk32_main.c  mk32_main.cpp  wifi_ap.c
resources/: app.js  index.html  restapi.md  style.css
tools/unit-test-app/: CMakeLists.txt  sdkconfig
tools/unit-test-app/main/: idf_component.yml
web/: app.js  common.scss  index.html  restapi.md  style.scss
