idf_component_register(SRCS "lcd_hardware.c"
                              "menu_state_machine.c"
                              "keyboard_gui.c"
                              "keyboard_gui_widgets.c"
                              "icons/keyboard_icon.c"
                              "icons/bluetooth_icon.c"
                              "icons/wifi_icon.c"
                              "icons/led_icon.c"
                              "icons/advanced_icon.c"
                              "icons/info_icon.c"
                              "icons/switch_icon.c"
                              "icons/bluetooth_pc_pair_icon.c"
                              "icons/bluetooth_phone_pair_icon.c"
                              "icons/keyboard_lock_icon.c"
                              "icons/keyboard_logging_icon.c"
                              "icons/led_pattern_icon.c"
                              "icons/wifi_setting_icon.c"
                              "icons/keyboard_meter_icon.c"
                              "icons/keyboard_reset_meter_icon.c"
                       INCLUDE_DIRS "include"
                       PRIV_INCLUDE_DIRS "private_include"
                       REQUIRES esp_lcd esp_driver_gpio esp_driver_spi esp_lvgl_port
                       PRIV_REQUIRES driver drv_loop keymap)
