idf_component_register(SRCS "lcd_hardware.c"
                              "menu_state_machine.c"
                              "keyboard_gui.c"
                              "keyboard_gui_keyboard_info.c"
                              "keyboard_gui_bluetooth.c"
                              "keyboard_gui_wifi.c"
                              "keyboard_gui_led.c"
                              "keyboard_gui_nonleaf_menu.c"
                              "keyboard_gui_about.c"
                              "icons/keyboard_icon.c"
                              "icons/bluetooth_icon.c"
                              "icons/wifi_icon.c"
                              "icons/led_icon.c"
                              "icons/advanced_icon.c"
                              "icons/info_icon.c"
                              "icons/switch_icon.c"
                              "icons/bluetooth_pc_pair_icon.c"
                              "icons/bluetooth_target.c"
                              "icons/keyboard_lock_icon.c"
                              "icons/keyboard_logging_icon.c"
                              "icons/led_pattern_icon.c"
                              "icons/wifi_setting_icon.c"
                              "icons/keyboard_meter_icon.c"
                              "icons/keyboard_reset_meter_icon.c"
                              "icons/keyboard_reset_meter_banner.c"
                              "icons/wifi_on.c"
                              "icons/wifi_off.c"
                              "icons/bluetooth_on.c"
                              "icons/bluetooth_off.c"
                              "icons/plug_on.c"
                              "icons/battery_charge.c"
                              "icons/battery_normal.c"
                              "icons/upper_case_letter.c"
                              "icons/lower_case_letter.c"
                       INCLUDE_DIRS "include"
                       PRIV_INCLUDE_DIRS "private_include"
                       REQUIRES esp_lcd esp_driver_gpio esp_driver_spi esp_lvgl_port
                       PRIV_REQUIRES driver drv_loop keymap ble control miscs)
